--- a/src/MSetExplorer/MainWindow.xaml
+++ b/src/MSetExplorer/MainWindow.xaml
@@ -24,7 +24,8 @@
 
         <Border Grid.Row="1" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <StackPanel Grid.Row="1" HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button HorizontalAlignment="Center" Width="100" Margin="0,15,0,15" Click="Button_Click">Close</Button>
+                <Button HorizontalAlignment="Center" Width="100" Margin="0,15,0,15" Click="CloseButton_Click">Close</Button>
+                <Button HorizontalAlignment="Center" Width="100" Margin="25,15,0,15" Click="RefreshButton_Click">Refresh</Button>
             </StackPanel>
         </Border>
 
