--- a/src/MSetExplorer/MapDisplay.xaml
+++ b/src/MSetExplorer/MapDisplay.xaml
@@ -8,8 +8,19 @@
              d:DesignHeight="796" d:DesignWidth="840">
     <Grid>
         <Border Grid.Row="0" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <!--<Canvas Name="MainCanvas" Background="Transparent" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown"  />-->
-            <Canvas Name="MainCanvas" Width="768" Height="768" Background="Transparent" MouseLeftButtonDown="MseLeftButtonDown" MouseLeftButtonUp="MseLeftButtonUp" MouseMove="MseMove" ClipToBounds="True" />
+
+            <Canvas Name="MainCanvas" Width="768" Height="768" 
+                        HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" 
+                        MouseLeftButtonDown="MseLeftButtonDown" MouseLeftButtonUp="MseLeftButtonUp" MouseMove="MseMove" 
+                        ClipToBounds="False">
+
+                <Border Width="772" Height="772" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="1" BorderBrush="BlueViolet"
+                        Canvas.Left="-2" Canvas.Top="-2" Panel.ZIndex="100">
+                    
+                </Border>
+
+            </Canvas>
+            
         </Border>
     </Grid>
 </UserControl>
