--- a/src/MSetExplorer/MapDisplay.xaml
+++ b/src/MSetExplorer/MapDisplay.xaml
@@ -12,12 +12,11 @@
             <Canvas Name="MainCanvas" Width="768" Height="768" 
                         HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" 
                         MouseLeftButtonDown="MseLeftButtonDown" MouseLeftButtonUp="MseLeftButtonUp" MouseMove="MseMove" 
-                        ClipToBounds="False">
+                        ClipToBounds="True">
 
-                <Border Width="772" Height="772" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="1" BorderBrush="BlueViolet"
+                <!--<Border Width="772" Height="772" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="1" BorderBrush="BlueViolet"
                         Canvas.Left="-2" Canvas.Top="-2" Panel.ZIndex="100">
-                    
-                </Border>
+                </Border>-->
 
             </Canvas>
             
