--- a/src/MSetExplorer/MapDisplay.xaml
+++ b/src/MSetExplorer/MapDisplay.xaml
@@ -11,8 +11,9 @@
 
             <Canvas Name="MainCanvas" Width="768" Height="768" 
                         HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" 
-                        MouseLeftButtonDown="MseLeftButtonDown" MouseLeftButtonUp="MseLeftButtonUp" MouseMove="MseMove" 
+                        
                         ClipToBounds="True">
+                <!--MouseLeftButtonDown="MseLeftButtonDown" MouseLeftButtonUp="MseLeftButtonUp" MouseMove="MseMove"-->
 
                 <!--<Border Width="772" Height="772" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="1" BorderBrush="BlueViolet"
                         Canvas.Left="-2" Canvas.Top="-2" Panel.ZIndex="100">
