--- a/src/MSetExplorer/MapDisplay.xaml
+++ b/src/MSetExplorer/MapDisplay.xaml
@@ -12,7 +12,7 @@
             <!--<Canvas Name="MainCanvas22" Width="768" Height="768" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" ClipToBounds="True" />-->
 
             <Canvas Name="MainCanvas" Width="768" Height="768" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" ClipToBounds="False">
-                <Border Width="772" Height="772" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="1" BorderBrush="BlueViolet"
+                <Border x:Name="canvasBorder" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="1" BorderBrush="BlueViolet"
                         Canvas.Left="-2" Canvas.Top="-2" Panel.ZIndex="100">
                 </Border>
             </Canvas>
