--- a/src/MSetExplorer/MapWindow/MapDisplay.xaml
+++ b/src/MSetExplorer/MapWindow/MapDisplay.xaml
@@ -8,15 +8,7 @@
              d:DesignHeight="796" d:DesignWidth="840">
     <Grid>
         <Border Grid.Row="0" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-
-            <!--<Canvas Name="MainCanvas22" Width="768" Height="768" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" ClipToBounds="True" />-->
-
-            <Canvas Name="MainCanvas" Width="768" Height="768" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" ClipToBounds="False">
-                <Border x:Name="canvasBorder" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="1" BorderBrush="BlueViolet"
-                        Canvas.Left="-2" Canvas.Top="-2" Panel.ZIndex="100">
-                </Border>
-            </Canvas>
-
+            <Canvas Name="MainCanvas" Width="768" Height="768" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent"/>
         </Border>
     </Grid>
 </UserControl>
