--- a/src/MSetExplorer/MainWindow.xaml
+++ b/src/MSetExplorer/MainWindow.xaml
@@ -5,37 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="MainWindow" Width="1100" Height="1280">
+        Title="MainWindow" Width="1400" Height="1280">
     
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="80"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="140"/>
+            <ColumnDefinition Width="1100"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Row="0" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button Name="btnGoLeft" HorizontalAlignment="Center" Width="100" Margin="25,15,0,15" Click="GoLeftButton_Click">Left</Button>
-                <Button Name="btnGoUp" HorizontalAlignment="Center" Width="100" Margin="25,15,0,15" Click="GoUpButton_Click">Up</Button>
-                <Button Name="btnGoRight" HorizontalAlignment="Center" Width="100" Margin="45,15,0,15" Click="GoRightButton_Click">Right</Button>
-                <Button Name="btnGoDown" HorizontalAlignment="Center" Width="100" Margin="25,15,0,15" Click="GoDownButton_Click">Down</Button>
+        <Border Grid.Column="0" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <StackPanel HorizontalAlignment="Left" Orientation="Vertical">
+                <Button Name="btnGoLeft" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="GoLeftButton_Click">Left</Button>
+                <Button Name="btnGoUp" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="GoUpButton_Click">Up</Button>
+                <Button Name="btnGoRight" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="GoRightButton_Click">Right</Button>
+                <Button Name="btnGoDown" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="GoDownButton_Click">Down</Button>
+                
+                <Button Name="btnGoBack" HorizontalAlignment="Center" Width="100" Margin="25,115,15,0" Click="GoBackButton_Click">Go Back</Button>
+                <Button Name="btnGoForward" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="GoForwardButton_Click">Go Forward</Button>
+                <Button Name="btnSave" HorizontalAlignment="Center" Width="100" Margin="25,115,15,0" Click="SaveButton_Click" >Save</Button>
+                <Button Name="btnClose" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="CloseButton_Click">Close</Button>
             </StackPanel>
         </Border>
 
-        <Border Grid.Row="1" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Border Grid.Column="1" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <local:MapDisplay x:Name="mapDisplay1" CanvasSize="{Binding Path=CanvasSize}"></local:MapDisplay>
         </Border>
 
-        <Border Grid.Row="2" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button HorizontalAlignment="Center" Width="100" Margin="0,15,0,15" Click="CloseButton_Click">Close</Button>
-                <Button Name="btnGoBack" HorizontalAlignment="Center" Width="100" Margin="25,15,0,15" Click="GoBackButton_Click">Go Back</Button>
-                <Button Name="btnGoForward" HorizontalAlignment="Center" Width="100" Margin="25,15,0,15" Click="GoForwardButton_Click">Go Forward</Button>
-                <Button Name="btnSave" HorizontalAlignment="Center" Width="100" Margin="45,15,0,15" Click="SaveButton_Click" >Save</Button>
+        <Border Grid.Column="2" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <StackPanel HorizontalAlignment="Left" Orientation="Vertical">
             </StackPanel>
         </Border>
 
