--- a/src/MSetExplorer/MainWindow/MainWindow.xaml
+++ b/src/MSetExplorer/MainWindow/MainWindow.xaml
@@ -6,7 +6,13 @@
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
         Title="MainWindow" Width="1420" Height="1105">
-    
+
+    <Window.CommandBindings>
+        <CommandBinding Command="local:CustomCommands.ProjectSave" CanExecute="SaveCommand_CanExecute" Executed="SaveCommand_Executed" />
+        <CommandBinding Command="local:CustomCommands.JobGoBack" CanExecute="GoBack_CanExecute" Executed="GoBack_Executed" />
+        <CommandBinding Command="local:CustomCommands.JobGoForward" CanExecute="GoForward_CanExecute" Executed="GoForward_Executed" />
+    </Window.CommandBindings>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -19,17 +25,27 @@
         </Grid.ColumnDefinitions>
 
         <Menu Grid.Row="0" Grid.ColumnSpan="3" Height="25">
-            <MenuItem Header="_File">
+            
+            <MenuItem Header="_Project">
+                <MenuItem Header="_New" Click="NewButton_Click"/>
                 <MenuItem Header="_Open" Click="OpenButton_Click"/>
-                <MenuItem Header="_Save" Click="SaveButton_Click" />
+                <MenuItem Header="_Save" Command="local:CustomCommands.ProjectSave" />
+                <MenuItem Header="Save_As" Click="SaveAsButton_Click" />
                 <Separator/>
                 <MenuItem Header="_Exit" Click="CloseButton_Click" />
             </MenuItem>
+            
             <MenuItem Header="_Windows">
                 <MenuItem Header="Color Band Editor" IsCheckable="True"/>
                 <MenuItem Header="Calculation Parameters" IsCheckable="True"/>
                 <MenuItem Header="Coordinates" IsCheckable="True"/>
             </MenuItem>
+            
+            <MenuItem Header="_Map">
+                <MenuItem Header="Move Back" Command="local:CustomCommands.JobGoBack" />
+                <MenuItem Header="Move Forward" Command="local:CustomCommands.JobGoForward" />
+            </MenuItem>
+
         </Menu>
         
         
@@ -40,8 +56,8 @@
                 <Button Name="btnGoRight" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="GoRightButton_Click">Right</Button>
                 <Button Name="btnGoDown" HorizontalAlignment="Center" Width="100" Margin="25,15,15,0" Click="GoDownButton_Click">Down</Button>
                 
-                <Button Name="btnGoBack" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="25,115,15,0" Click="GoBackButton_Click">Go Back</Button>
-                <Button Name="btnGoForward" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="25,15,15,0" Click="GoForwardButton_Click">Go Forward</Button>
+                <Button Name="btnGoBack" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="25,115,15,0" Command="local:CustomCommands.JobGoBack">Go Back</Button>
+                <Button Name="btnGoForward" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="25,15,15,0" Command="local:CustomCommands.JobGoForward">Go Forward</Button>
             </StackPanel>
         </Border>
 
