--- a/src/MSetExplorer/MainWindow/MainWindow.xaml
+++ b/src/MSetExplorer/MainWindow/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="MainWindow" Width="1620" Height="1105">
+        Title="MainWindow" Width="1480" Height="1105">
 
     <Window.CommandBindings>
         <CommandBinding Command="local:CustomCommands.ProjectSave" CanExecute="SaveCommand_CanExecute" Executed="SaveCommand_Executed" />
@@ -27,7 +27,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="140"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="410"/>
+            <ColumnDefinition Width="300"/>
         </Grid.ColumnDefinitions>
 
         <Menu Grid.Row="0" Grid.ColumnSpan="3" Height="25">
@@ -89,16 +89,16 @@
             </Grid.ColumnDefinitions>
 
             <Border Grid.Row="0" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <StackPanel HorizontalAlignment="Stretch" Orientation="Vertical">
+                <StackPanel HorizontalAlignment="Stretch" Orientation="Vertical" Margin="0,5,0,5">
 
-                    <StackPanel Orientation="Horizontal" Margin="0,20,0,20">
-                        <TextBlock Width="90" Margin="10, 10, 20, 0" FontSize="16" Text="Iterations:" VerticalAlignment="Top"/>
-                        <TextBox x:Name="txtIterations" Text="700" Width="70"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Width="90" Margin="5" FontSize="14" Text="Iterations:"/>
+                        <TextBox x:Name="txtIterations" Text="700" Width="70"  VerticalAlignment="Center"/>
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Margin="0,0,0,20">
-                        <TextBlock Width="90" Margin="10, 10, 20, 0" FontSize="16" Text="Steps:" VerticalAlignment="Top"/>
-                        <TextBox Text="{Binding Path=Steps}" Width="70"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Width="90" Margin="5" FontSize="14" Text="Steps:"/>
+                        <TextBox Text="{Binding Path=Steps}" Width="70" VerticalAlignment="Center"/>
                     </StackPanel>
 
                 </StackPanel>
