--- a/src/MSetExplorer/ColorPanel/ColorPanelControl.xaml
+++ b/src/MSetExplorer/ColorPanel/ColorPanelControl.xaml
@@ -1,16 +1,15 @@
-﻿<UserControl x:Class="MSetExplorer.MapDisplay"
+﻿<UserControl x:Class="MSetExplorer.ColorPanelControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MSetExplorer"
              mc:Ignorable="d" 
-             d:DesignHeight="796" d:DesignWidth="840">
+             d:DesignHeight="60" d:DesignWidth="180">
     <Grid>
-        <Border Grid.Row="0" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Canvas Name="MainCanvas" Width="1024" Height="1024" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent"/>
+        <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Canvas Name="MainCanvas" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent"/>
         </Border>
     </Grid>
-</UserControl>
-
     
+</UserControl>
