--- a/src/MSetExplorer/MainWindow/MainWindow.xaml
+++ b/src/MSetExplorer/MainWindow/MainWindow.xaml
@@ -75,7 +75,7 @@
         <!--<local:MapDisplay x:Name="mapDisplay1" CanvasSize="{Binding Path=CanvasSize}"></local:MapDisplay>-->
 
         <Border Grid.Row="1" Grid.Column="1" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <local:MapDisplay x:Name="mapDisplay1"></local:MapDisplay>
+            <local:MapDisplayControl x:Name="mapDisplay1"></local:MapDisplayControl>
         </Border>
 
         <Grid Grid.Row="1" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
